--- a/style.css
+++ b/style.css
@@ -71,3 +71,82 @@ img {
 .clear {
   clear: both;
 }
+
+
+@media screen and (max-width: 420px) {
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+
+ html {
+   font-size: 100%;
+ }
+
+ .container, .container.grey {
+   background-color: #f1f2cd;
+ }
+
+ #steps {
+   background-color: white;
+ }
+
+ .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 0;
+  padding: 1em;
+ }
+
+ #lezioni .row>.left,
+ #lezioni .row>.right{
+ float: none;
+ width: 100%;
+ margin: 1em 0;
+}
+.row> h1 {
+  float: none;
+  width: 100%;
+}
+
+  #lezioni .row img {
+   height: 100%;
+   width: 20%;
+}
+
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+   float: none;
+   width: 100%;
+   margin-top: 0;
+   margin: 1em 0;
+}
+
+  #steps .row img,
+  #steps .row img,
+  #steps .row img {
+   height: 100%;
+   width: 20%;
+}
+
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+   float: none;
+   width: 100%;
+   margin-top: 0;
+   margin: 1em 0;
+}
+
+  #why .row img,
+  #why .row img,
+  #why .row img {
+   height: 100%;
+   width: 20%;
+ }
+
+
+}
